# Raspberry-Pi-Visual-FFT

Arduino Files/TestRGB_screen/: TestRGB_screen.ino
Arduino Files/Test_sending_to_pi/: Test_sending_to_pi.ino
Arduino Files/raspberrypi-arduino-control/: raspberrypi-arduino-control.ino
Arduino Files/raspi-led-control/: raspi-led-control.ino
Pico_files/: CMakeLists.txt  README.md
Pico_files/Audio_ADC/: CMakeLists.txt  adc.c
Pico_files/Audio_FFT/: fft.c
Python_files/: FFT_screen_class.py  FFT_to_screen.py  LED_control.py  online_test.py  test_class.py
Python_files/test_scripts/: test_spi.py  test_uart.py
VisualFFT/Audio_FFT/: fft.c
